--- a/BlazorServerCrud1/Pages/Products.razor
+++ b/BlazorServerCrud1/Pages/Products.razor
@@ -1,5 +1,5 @@
 ﻿
-@page "/products/{Type?}/{SubType1?}/{SubType2?}/{SubType3?}"
+@page "/products/{Path?}/{SubPath1?}/{SubPath2?}/{SubPath3?}"
 
 
 
