--- a/BlazorServerCrud1/Pages/Products.razor
+++ b/BlazorServerCrud1/Pages/Products.razor
@@ -26,7 +26,7 @@
 @foreach (var product in Items)
 {
   
-    <ProductCard id=@product.Id class="product-card" Name=@product.Name>
+    <ProductCard id=@product.Id class="product-card" Name=@product.Name Type=@product.Type>
         <ProductImage Image=@product.Image style="height:50%; text-align:center;">
 
         </ProductImage>
