--- a/BlazorServerCrud1/Pages/Products.razor
+++ b/BlazorServerCrud1/Pages/Products.razor
@@ -38,7 +38,7 @@
         <ProductPrice>
             @product.Price @product.PriceUnit
         </ProductPrice> 
-        Hello world!
+        Type: @product.Type
     </ProductCard>
           
     
