--- a/BlazorServerCrud1/Components/CarouselComponent/Carousel.razor
+++ b/BlazorServerCrud1/Components/CarouselComponent/Carousel.razor
@@ -1,7 +1,5 @@
 ﻿@using System.Diagnostics
 @using Microsoft.AspNetCore.Components.Rendering
-<h3>Carousel</h3>
-
 
 @*width: 100vw;
  position: relative;
@@ -11,7 +9,7 @@
  left: 50%;*@
 
 
-<div class="container m-0 p-0" style="height:@(height); width:@(width); max-width:@(max_width); overflow-x:scroll;overflow-y:hidden; scroll-snap-type:x mandatory;">
+<div class="container m-0 p-0" style="width:@(width); max-width:@(max_width); overflow-x:scroll;overflow-y:hidden; scroll-snap-type:x mandatory;">
     @if (Images != null)
     {
         <nobr>
@@ -22,7 +20,7 @@
             @foreach (var img in Images)
             {
                 
-                <img src=@img style="object-fit:contain; max-width:@(width); min-width:@(width); max-height:@(height); scroll-snap-align:start;">
+                <img src=@img id=@img style="object-fit:contain; max-width:@(width); min-width:@(width); scroll-snap-align:start;">
                 
             }
             
@@ -34,8 +32,11 @@
     
     
 </div>
-<a href="#humidor.jpg">link</a>
-<br>
+
+
+
+
+
 
 
 
@@ -46,7 +47,7 @@
 @code 
 {
     private string width="100%";
-    private string height="500px";
+    //private string height="500px";
     private string max_width = "600px";
 
     [Parameter]
@@ -55,7 +56,7 @@
     [Parameter]
     public IEnumerable<string>? Images { get; set; }
 
-   
-    
+        
+
 
 }
