--- a/BlazorServerCrud1/Components/PaginatorComponent/Paginator.razor
+++ b/BlazorServerCrud1/Components/PaginatorComponent/Paginator.razor
@@ -1,8 +1,6 @@
 ﻿@using System.Diagnostics
 
-<div style="width:100%; height:100px;">
-    
-    
+<div>
     @foreach(int item in ButtonItems)
     {
         if (item == SelectedPage)
@@ -13,32 +11,19 @@
         {
             <button @onclick="()=> OnClick(item)">@(item+1)</button>
         }
-        
     }
-
     <span>items: @TotalNumberOfItems</span>
 
-
 </div>
-<article>
 
-    <CascadingValue Value=PaginatorCallback IsFixed=true>
-        <CascadingValue Value=ItemsPerPage Name="ItemsPerPage">
-            <CascadingValue Value=SelectedPage Name="SelectedPage">
-                @ChildContent
-            </CascadingValue>
-        </CascadingValue>
-    </CascadingValue>
-
-</article>
+@ChildContent 
 
 @code 
 {
-    private List<int> ButtonItems = new List<int>();
 
-    //[Parameter]
-    //public PaginatorParam? PaginatorCascade {get;set;}
-
+    [Parameter]
+    public EventCallback<int> OnSelectPage { get; set; }
+    
     [Parameter]
     public int SelectedPage { get; set; }
 
@@ -46,30 +31,13 @@
     public int TotalNumberOfItems { get; set; }
 
     [Parameter]
-    public int ItemsPerPage { get; set; } 
-
-    [Parameter]
-    public Action<int, int>? PaginatorCallback { get; set; }
+    public int ItemsPerPage { get; set; }
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
-    protected override Task OnInitializedAsync()
-    {
-        TotalNumberOfItems = 10;
-        ItemsPerPage = 10;
-        //SelectedPage = 0;
-        PaginatorCallback = tst;
 
-
-        //PaginatorCascade = new PaginatorParam
-        //{
-        //    SelectedPage=1,
-        //    PaginatorCallback = tst
-        //};
-        //PaginatorCascade.PaginatorCallback = tst;
-        return base.OnInitializedAsync();
-    }
+    private List<int> ButtonItems = new List<int>();
 
     protected override Task OnParametersSetAsync()
     {
@@ -78,46 +46,13 @@
         {
             ButtonItems.Add(j);
         }
+
         return base.OnParametersSetAsync();
     }
 
-    private void OnClick(int i)
-    {
-        Debug.WriteLine("hello button in paginator"+i);
-        SelectedPage = i;
-        //OnButtonClick?.Invoke(i);
+    private async Task OnClick(int i)
+    {        
+        await OnSelectPage.InvokeAsync(i);        
     }
-
-    private void tst(int index, int numberOfItems)
-    {
-        
-        bool needsRedraw = false;
-
-        SelectedPage = index;
-
-        Debug.WriteLine("paginator callback");
-
-        if (numberOfItems != TotalNumberOfItems)
-        {
-            TotalNumberOfItems = numberOfItems;
-            needsRedraw = true;
-        }
-                
-        if(needsRedraw)
-        {
-            Redraw();
-        }
-
-
-    }
-
-    private void Redraw()
-    {
-        ButtonItems.Clear();
-        for (int i = TotalNumberOfItems, j=0; i >0; i-=ItemsPerPage, j++)
-        {
-            ButtonItems.Add(j);
-        }
-        StateHasChanged();
-    }
+   
 }
