--- a/BlazorServerCrud1/Shared/MainLayout.razor
+++ b/BlazorServerCrud1/Shared/MainLayout.razor
@@ -1,7 +1,10 @@
 ﻿@inherits LayoutComponentBase
 @using BlazorServerCrud1.Components.SearchBar
 @using BlazorServerCrud1.Components.PaginatorComponent
+@using BlazorServerCrud1.Data.Settings
 @using BlazorServerCrud1.Pages
+
+
 
 <PageTitle>BlazorServerCrud1</PageTitle>
 
