--- a/BlazorServerCrud1/Shared/NavMenu.razor
+++ b/BlazorServerCrud1/Shared/NavMenu.razor
@@ -1,10 +1,12 @@
 ﻿@using BlazorServerCrud1.Components.MenuComponents
+@using BlazorServerCrud1.Data.Settings
 @using CosmosDBData
 @inject ICosmosDBContext cosmosDB;
+@inject ISettingsService settings;
 
 <div class="lefttop-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorServerCrud1</a>
+        <a class="navbar-brand" href="">@settings.Name</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
