more message, and page size bug

--- a/BlazorServerCrud1/Pages/Index.razor
+++ b/BlazorServerCrud1/Pages/Index.razor
@@ -24,6 +24,11 @@ Welcome to your new app.
 </form>
 <H1>message:@message</H1>
 
+@foreach (var item in Chat)
+{
+    <span>@item</span><br>
+}
+
 
 
 
