--- a/BlazorServerCrud1/Pages/Products.razor
+++ b/BlazorServerCrud1/Pages/Products.razor
@@ -17,7 +17,7 @@
 @inject ProtectedLocalStorage localStorage;
 
 
-<Paginator OnSelectPage=OnSelectPage OnSelectPageSize=OnSelectPageSize SelectedPage=SelectedPage TotalNumberOfItems=totalNumberOfItems ItemsPerPage=ItemsPerPage >
+<Paginator OnSelectPage=OnSelectPage OnSelectPageSize=OnSelectPageSize SelectedPage=SelectedPage TotalNumberOfItems=totalNumberOfItems ItemsPerPage=pageSize >
     
 
     <h3>@SearchWord</h3>
